--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="intro">
 		<div class="container">
 			<div class="intro__inner">
-				<h2 class="intro__suptitle">sCreative Template</h2>
+				<h2 class="intro__suptitle">Creative Template</h2>
 				<h1 class="intro__title">Welcome to MoGo</h1>
 				<a class="btn" href="#">Learn More</a>
 			</div>
